# UkrainianCafe

./: pyproject.toml
ukrcafe/: manage.py
ukrcafe/app_auth/: forms.py  urls.py  views.py
ukrcafe/app_auth/templates/app_auth/: password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html
ukrcafe/staff_management/: forms.py  models.py
ukrcafe/staff_management/templates/staff_management/: staff_detail.html
ukrcafe/ukrcafe/: asgi.py  settings.py  urls.py  wsgi.py
