[project]
name = "ukrainiancafe"
version = "0.1.0"
description = ""
authors = [
    {name = "nik231",email = "nnizalov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django (>=5.2.8,<6.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
